--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.research.hangga.autoalign.MainActivity">
 
-    <com.research.hangga.autoalign.FlowLayout
+    <com.research.hangga.autoalign.FlowPopulateLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center|top">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,5 +48,5 @@
             android:layout_height="wrap_content"
             android:text="American Kick Boxing"/>
 
-        </com.research.hangga.autoalign.FlowLayout>
+        </com.research.hangga.autoalign.FlowPopulateLayout>
 </RelativeLayout>
